[package]
name = "eth_ohlc_analysis"
version = "0.6.0"
edition = "2018"
description = "A bot that analyses open high low close of ethereum in sec basis"
author = "dennis mwangi"
email = "dennis@ngeni.io"
license = "MIT OR Apache-2.0"
keywords = ["ftx", "crypto", "bot", "futures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.5"
futures = { version = "0.3", optional = true }
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = { version = "^0.17.2", features = [
    "native-tls",
], optional = true }
hex = "^0.4.3"
ftx = "0.5.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]